@@ -24,6 +24,17 @@ based on Perl-5.6.0 (builds 6xx).
 See http://perl.apache.org/distributions.html for Win32 binaries,
 including ActivePerl ppms of mod_perl and some Apache::* packages.
 
+=head1 CHANGES
+
+Beginning with version 1.3.15, Apache has changed the convention 
+for naming Win32 modules in order to follow that for Unix systems. 
+Consequently, the name of the mod_perl module built here has
+been changed from ApacheModulePerl.dll to mod_perl.so. This
+is just a change in convention; if you are building mod_perl
+against pre-1.3.15 Apache sources, and wish to follow the old
+convention, simply copy mod_perl.so to your Apache modules directory 
+as ApacheModulePerl.dll.
+
 =head1 BUILDING
 
 There are two ways to build mod_perl - with MS Developer Studio,
@@ -40,15 +51,16 @@ Run
   perl Makefile.PL
   nmake install
 
-This will install the Perl side of mod_perl and setup files for the library build.
+This will install the Perl side of mod_perl and setup files for the 
+library build.
 
-=item Build ApacheModulePerl.dll
+=item Build mod_perl.so
 
 Using MS developer studio, 
 
  select "File -> Open Workspace ...", 
  select "Files of type [Projects (*.dsp)]"
- open mod_perl-x.xx/src/modules/ApacheModulePerl/ApacheModulePerl.dsp
+ open mod_perl-x.xx/src/modules/win32/mod_perl.dsp
 
 =item Settings
 
@@ -68,9 +80,9 @@ select "Project -> Add to Project -> Files" adding:
  ApacheCore.lib (e.g. C:\Apache\ApacheCore.lib)
 
  select "Build -> Set Active Configuration... -> 
- [ApacheModulePerl - Win32 Release]"
+ [mod_perl - Win32 Release]"
 
- select "Build -> Build ApacheModulePerl.dll"
+ select "Build -> Build mod_perl.so"
 
 You may see some harmless warnings, which can be reduced (along with
 the size of the DLL), by setting:
@@ -80,14 +92,14 @@ the size of the DLL), by setting:
 
 =item Testing
 
-Once ApacheModulePerl.dll is built and apache.exe is installed you may
+Once mod_perl.so is built and apache.exe is installed you may
 test mod_perl with:
 
  nmake test
 
 =item Apache setup
 
-You do not need to rebuild apache, just copy ApacheModulePerl.dll to
+You do not need to rebuild apache, just copy mod_perl.so to
 $SERVER_ROOT/modules 
 
 =back
@@ -98,7 +110,7 @@ Generating the Makefile as, for example,
 
  perl Makefile.PL APACHE_SRC=..\apache_1.3.xx INSTALL_DLL=\Apache\modules
 
-will build mod_perl (including ApacheModulePerl.dll) entirely from 
+will build mod_perl (including mod_perl.so) entirely from 
 the command line. The arguments accepted include
 
 =over 3
@@ -110,9 +122,9 @@ is assumed that Apache has already been built in this directory.
 
 =item INSTALL_DLL
 
-This gives the location of where to install ApacheModulePerl.dll
+This gives the location of where to install mod_perl.so
 (eg, \Apache\modules). No default is assumed - if this argument
-is not given, ApacheModulePerl.dll must be copied manually.
+is not given, mod_perl.so must be copied manually.
 
 =item DEBUG
 
@@ -141,7 +153,7 @@ will complete the installation.
 
 Add this line to httpd.conf:
 
- LoadModule perl_module modules/ApacheModulePerl.dll
+ LoadModule perl_module modules/mod_perl.so
 
 Be sure that 'C:\perl\bin' is in your path so apache can find perl.dll
 
