@@ -97,7 +97,8 @@ src/modules/perl/perl_util.c
 src/modules/perl/perlio.c
 src/modules/perl/perl_config.c
 src/modules/perl/Makefile
-src/modules/ApacheModulePerl/ApacheModulePerl.dsp
+src/modules/win32/mod_perl.dsp
+src/modules/win32/mod_perl.def
 src/opcodes.txt
 t/report.PL
 t/README
