@@ -1,0 +1,14 @@
+LIBRARY 
+
+EXPORTS
+
+   sv2request_rec
+   perl_request_rec
+   mod_perl_tie_table
+   perl_cmd_perl_FLAG
+   perl_cmd_perl_TAKE2
+   perl_cmd_perl_TAKE1
+   perl_cmd_perl_TAKE123
+   perl_perl_cmd_cleanup
+
+
