@@ -10,6 +10,11 @@ all changes without author attribution are by Doug MacEachern
 
 =item 1.24_02-dev
 
+win32 updates for 1.3.15, including ApacheModulePerl.{dsp,dll} ->
+mod_perl.{dsp,so} rename
+[John K. Sterling <sterling@covalent.net>,
+Randy Kobes <randy@theoryx5.uwinnipeg.ca>]
+
 fix directive handlers bug triggered by LoadModule foo_module
 
 allow $r->finfo to be modified
